fixed alignment in nav

--- a/src/style/Navigation/Navigation.scss
+++ b/src/style/Navigation/Navigation.scss
@@ -6,6 +6,7 @@
   padding: 0 15%;
   z-index: 100;
   justify-content: space-around;
+  align-items: center;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
